# ROS2-practice

./: .gitignore  README.md
my_package/: frames.gv
my_package/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
my_package/install/my_package/share/my_package/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
my_package/install/my_package/share/my_package/cmake/: my_packageConfig-version.cmake  my_packageConfig.cmake
my_package/install/my_package/share/my_package/environment/: path.dsv  (+1 more)
my_package/log/: latest_build  latest_list
my_package/src/my_package/: CMakeLists.txt
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/c_py_pkg/lib/c_py_pkg/: add_two_ints_server.py  hw_status_publisher.py  led_panel.py
ros2_ws/install/c_py_pkg/share/c_py_pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/cpp_pkg/lib/cpp_pkg/: add_two_ints_client  add_two_ints_client_no_oop  add_two_ints_server  cpp_node  hardware_status_publisher  robot_news_station  smartphone
ros2_ws/install/cpp_pkg/share/cpp_pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.sh  package.xml  package.zsh
ros2_ws/install/interfaces/share/interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros2_ws/install/interfacesclear/share/interfacesclear/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/my_py_pkg/share/my_py_pkg/: package.sh
ros2_ws/install/my_robot_bringup/share/my_robot_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros2_ws/install/p_py_pkg/lib/p_py_pkg/: my_publisher = p_py_pkg.publisher_2:mainmy_subscriber
ros2_ws/install/p_py_pkg/share/p_py_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/log/: latest_build
ros2_ws/src/c_py_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/c_py_pkg/scripts/: add_two_ints_client_no_oop.py  add_two_ints_client_oop.py  add_two_ints_server.py  battery.py  hw_status_publisher.py  led_panel.py  number_counter.py  number_publisher.py  publisher.py  py_node_template.py  reset_counter_client.py  robot_news_station.py  smartphone.py  subscriber.py
ros2_ws/src/cpp_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/cpp_pkg/src/: add_two_ints_client.cpp  add_two_ints_client_no_oop.cpp  add_two_ints_server.cpp  hw_status_publisher.cpp  my_first_node.cpp  robot_news_station.cpp  smartphone.cpp
ros2_ws/src/interfaces/: CMakeLists.txt
ros2_ws/src/interfacesclear/: CMakeLists.txt  package.xml
ros2_ws/src/my_robot_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/my_robot_bringup/launch/: news_app.launch.py  number_app.launch.py
ros2_ws/src/p_py_pkg/: setup.cfg  setup.py
ros2_ws/src/p_py_pkg/p_py_pkg/: subscriber_2.py
tf-urdf-gazebo_ws/: CMakeLists.txt  package.xml
tf-urdf-gazebo_ws/src/: my_robot.urdf
trying_ros_gazebo/: .gitignore
trying_ros_gazebo/install/: local_setup.sh  setup.sh  setup.zsh
trying_ros_gazebo/install/urdf_example/share/urdf_example/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.sh  package.xml  package.zsh
trying_ros_gazebo/log/: latest_build  latest_list
trying_ros_gazebo/src/urdf_example/: README.md
trying_ros_gazebo/src/urdf_example/description/: example_robot.urdf.xacro
(+164 files in other folders)
